fixed word-wrap for the notes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,7 +71,7 @@ form .fab {
   float: left;
 }
 .note h1 {
-  
+  word-wrap: break-word;
   font-size: 1em;
   margin-bottom: 6px;
 }
